test/Fail/Issue478.err
Issue478.agda:12.9-12: error: [UnequalTerms]
Set₁ !=< T
when checking that the expression Set has type T
